[gd_scene load_steps=8 format=1]

[ext_resource path="res://joystick_panel/background.png" type="Texture" id=1]
[ext_resource path="res://control_panels/panel1.gd" type="Script" id=2]
[ext_resource path="res://fonts/lcd14/LCD14.otf" type="DynamicFontData" id=3]
[ext_resource path="res://controls/multipad.gd" type="Script" id=4]
[ext_resource path="res://controls/canvas.gd" type="Script" id=5]
[ext_resource path="res://joystick_panel/grid.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]

font/size = 24
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[node name="panel1" type="TextureFrame"]

rect/min_size = Vector2( 24, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 400.0
margin/bottom = 240.0
texture = ExtResource( 1 )
stretch_mode = 0
script/script = ExtResource( 2 )

[node name="background" type="ColorFrame" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 400.0
margin/bottom = 240.0
color = Color( 0, 0, 0, 1 )

[node name="active_vjoy_label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 183.0
margin/top = 1.0
margin/right = 217.0
margin/bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "00"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="pad1" type="Polygon2D" parent="."]

transform/pos = Vector2( -200, 0 )
polygon = Vector2Array( 400, 240, 400, 40, 200, 40, 200, 240 )
uv = Vector2Array(  )
color = Color( 0.535156, 0.535156, 0.535156, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0
script/script = ExtResource( 4 )
mode = "Stick"
canvas = NodePath("../canvas")
fg_color = Color( 1, 1, 1, 1 )

[node name="pad2" type="Polygon2D" parent="."]

polygon = Vector2Array( 400, 240, 200, 40, 200, 240 )
uv = Vector2Array(  )
color = Color( 0.535156, 0.535156, 0.535156, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0
script/script = ExtResource( 4 )
mode = "SingleButton"
canvas = NodePath("../canvas")
fg_color = Color( 1, 1, 1, 1 )

[node name="pad3" type="Polygon2D" parent="."]

polygon = Vector2Array( 400, 240, 400, 40, 200, 40 )
uv = Vector2Array(  )
color = Color( 0.535156, 0.535156, 0.535156, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0
script/script = ExtResource( 4 )
mode = "SingleButton"
canvas = NodePath("../canvas")
fg_color = Color( 1, 1, 1, 1 )

[node name="canvas" type="ReferenceFrame" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 5 )

[node name="TextureFrame" type="TextureFrame" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 400.0
margin/bottom = 240.0
texture = ExtResource( 6 )
stretch_mode = 2


